--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: pharmacie_pkg
 description: "A new Flutter package project."
 version: 0.0.1
-homepage:
+homepage: "https://github.com/devOnlyPurple/pharma_pkg"
 
 environment:
   sdk: ">=3.4.1 <4.0.0"
