--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,8 @@ dev_dependencies:
 flutter:
   # To add assets to your package, add an assets section, like this:
   assets:
+    - assets/icons/
     - assets/cert/kondjigbale.crt
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
   # https://flutter.dev/assets-and-images/#from-packages
