--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,8 @@ dev_dependencies:
 flutter:
   # To add assets to your package, add an assets section, like this:
   assets:
-    - lib/assets/icons/
-    - lib/assets/cert/kondjigbale.crt
+    - assets/icons/
+    - assets/cert/kondjigbale.crt
   #
   # For details regarding assets in packages, see
   # https://flutter.dev/assets-and-images/#from-packages
