--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   url_launcher: ^6.2.4
   cached_network_image: ^3.3.1
   flutter_svg: ^2.0.9
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
